Resolves: tdf#150780 Overtyping is not editing

Change-Id: Ie83245479e4f356cf120dae1da39d35a9bb1a2e3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141676
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins